tests/mm0_mmu/fail/bad-id4.mm0
-- id with forbidden char -
sort sot-;
